--- a/SynTest01.yml
+++ b/SynTest01.yml
@@ -5,9 +5,7 @@
   user: remote
 
   vars:
-    ip: '10.0.5.2'    
-#   username: 'username'
-#   password: 'password'
+    - config: "/opt/variables/oneview_config.json"    
 
   tasks:
     - name: Gather facts about all Storage Volume Templates
