--- a/SynTest01.yml
+++ b/SynTest01.yml
@@ -7,8 +7,8 @@
   vars:
     - config: "/opt/variables/oneview_config.json"    
   tasks:
-  - name: Gather facts about all Storage Volume Templates
-    oneview_storage_volume_template_facts:
-      config: "{{ config }}"
-    delegate_to: localhost
+#    - name: Gather facts about all Storage Volume Templates
+      oneview_storage_volume_template_facts:
+        config: "{{ config }}"
+      delegate_to: localhost
   - debug: var=storage_volume_templates
