--- a/SynTest01.yml
+++ b/SynTest01.yml
@@ -8,7 +8,7 @@
     - config: "/opt/variables/oneview_config.json"    
   tasks:
      - name: Creates directory
-       file: path=/tmp/www state=directory owner=root mode=0775
+       file: path=/tmp/www state=directory mode=0775
 #    - name: Gather facts about all Storage Volume Templates
 #      oneview_storage_volume_template_facts:
 #        config: "{{ config }}"
