--- a/SynTest01.yml
+++ b/SynTest01.yml
@@ -8,9 +8,9 @@
     - config: "/opt/variables/oneview_config.json"    
   tasks:
      - name: Creates directory
-       file: path=/tmp/www state=directory mode=0775
-#    - name: Gather facts about all Storage Volume Templates
-#      oneview_storage_volume_template_facts:
-#        config: "{{ config }}"
+       file: path=/tmp/www1 state=directory mode=0775
+     - name: Gather facts about all Storage Volume Templates
+       oneview_storage_volume_template_facts:
+         config: "{{ config }}"
 #      delegate_to: localhost
 #    - debug: var=storage_volume_templates
