--- a/SynTest01.yml
+++ b/SynTest01.yml
@@ -9,8 +9,16 @@
   tasks:
      - name: Creates directory
        file: path=/tmp/www1 state=directory mode=0775
-     - name: Gather facts about all Storage Volume Templates
-       oneview_storage_volume_template_facts:
-         config: "{{ config }}"
-#      delegate_to: localhost
-#    - debug: var=storage_volume_templates
+- name: Create a Server Profile with connections
+  oneview_server_profile:
+    config: "{{ config }}"
+    data:
+      name: "server-profile-with-connections"
+      connections:
+        - id: 1
+          name: connection1
+          functionType: Ethernet
+          portId: Auto
+          requestedMbps: 2500
+          networkName: eth-demo
+  delegate_to: localhost
