--- a/SynTest01.yml
+++ b/SynTest01.yml
@@ -6,9 +6,9 @@
 
   vars:
     - config: "/opt/variables/oneview_config.json"  
-  environment:
-    ANSIBLE_LIBRARY: "/usr/lib/python2.7/site-packages/hpOneView/oneview-ansible/library"
-    PYTHONPATH: "/usr/lib/python2.7/site-packages/hpOneView/oneview-ansible/library"
+ # environment:
+ #   ANSIBLE_LIBRARY: "/usr/lib/python2.7/site-packages/hpOneView/oneview-ansible/library"
+ #   PYTHONPATH: "/usr/lib/python2.7/site-packages/hpOneView/oneview-ansible/library"
   
   tasks:
     - name: Gather facts about all Connection Templates
