--- a/ansible.cfg
+++ b/ansible.cfg
@@ -11,5 +11,5 @@
 
 # some basic default values...
 
-#inventory     = /home/jzl2w8/quicktest/inventory/
-library       = /usr/share/ansible:/usr/share/ansible/oneview-ansible-3.1.1/library/
+inventory     = /home/jzl2w8/quicktest/inventory/
+library       = /usr/share/ansible:/home/jzl2w8/oneview-ansible-3.1.1/library/
