Revert "Update SynTest01.yml"
This reverts commit ec19789ec13bab71a31d09b5f616f8db2336dc1d.

--- a/SynTest01.yml
+++ b/SynTest01.yml
@@ -5,7 +5,7 @@
   user: remote
 
   vars:
-    - config: "/tmp/oneview_config.json"  
+    - config: "/opt/variables/oneview_config.json"  
  # environment:
  #   ANSIBLE_LIBRARY: "/usr/lib/python2.7/site-packages/hpOneView/oneview-ansible/library"
  #   PYTHONPATH: "/usr/lib/python2.7/site-packages/hpOneView/oneview-ansible/library"
